--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "raf": "^3.4.1",
     "react": "16.12.0",
     "react-dom": "^16.12.0",
-    "react-sizeme": "^2.6.12"
+    "react-sizeme": "^2.6.12",
+    "styled-components": "^5.0.1"
   }
 }
